refactor: fix error in text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <ul>
         <li>e-mail <a href="mailto:deylina70@gmail.com">deylina70@gmail.com</a></li>
         <li>dickord AlinaDeykina(@AlinaDey)</li>
-        <li>telephone <a href="tel:+79531564285">+7 (953) 156-42-85</a></li>
+        <li>telephone <a href="tel:+79531564285">+79531564285</a></li>
         <li>github <a href="https://github.com/AlinaDey">AlinaDey</a></li>
     </ul>
     <section>
@@ -44,7 +44,7 @@
         <h2>Code examples</h2>
         <div>
             <div>function multiply(a, b){</в>
-            <div>&emsp;&emsp;return a * b</div>
+            <div>&emsp;&emsp;return a * b</div> &nbsp;
             <div>}</div>
         </div>
     </section>
