refactor: fix errors in code

--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
   <link rel="stylesheet" href="css/styles.css?v=1.0">
-  <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
 </head>
 <body>
     <h1>Deykina Alina</h1>
@@ -15,10 +12,10 @@
     <img src="me.jpg" alt="Deykina Alina">
     <h2>Contacts</h2>
     <ul>
-        <li>e-mail <a href="mailto:deylina70@gmail.com">deylina70@gmail.com</a></li>
+        <li>e-mail&nbsp;<a href="mailto:deylina70@gmail.com">deylina70@gmail.com</a></li>
         <li>dickord AlinaDeykina(@AlinaDey)</li>
-        <li>telephone <a href="tel:+79531564285">+79531564285</a></li>
-        <li>github <a href="https://github.com/AlinaDey">AlinaDey</a></li>
+        <li>telephone&nbsp;<a href="tel:+79531564285">+79531564285</a></li>
+        <li>github&nbsp;<a href="https://github.com/AlinaDey">AlinaDey</a></li>
     </ul>
     <section>
         <h2>About me</h2>
@@ -51,10 +48,10 @@
     <section>
         <h2>Work experience</h2>
         <ul>
-            <li>Html, scc <a href="https://github.com/AlinaDey/work1">work1</a></li>
-            <li>Html, scc <a href="https://github.com/AlinaDey/work2">work2</a></li>
-            <li>Html, scc, js <a href="https://github.com/AlinaDey/work3">work3</a></li>
-            <li>Html, css <a href="https://github.com/AlinaDey/work4">work4</a></li>
+            <li>Html, scc&nbsp;<a href="https://github.com/AlinaDey/work1">work1</a></li>
+            <li>Html, scc&nbsp;<a href="https://github.com/AlinaDey/work2">work2</a></li>
+            <li>Html, scc, js&nbsp;<a href="https://github.com/AlinaDey/work3">work3</a></li>
+            <li>Html, css&nbsp;<a href="https://github.com/AlinaDey/work4">work4</a></li>
         </ul>
     </section> 
     <section>
