refactor: delete whitespace

--- a/index.html
+++ b/index.html
@@ -19,13 +19,8 @@
     </ul>
     <section>
         <h2>About me</h2>
-        <p>Last year I completed courses in basic Html and css. 
-        At the beginning of 2022, I found courses from RSSchool. 
-        I signed up for Stage-1, but in the process 
-        I realized that my knowledge was not enough.</p>
-        <p>I was glad this fall I learned about Stage-0. 
-        I hope this course will help me reach a higher 
-        level of knowledge and go to study further</p>
+        <p>Last year I completed courses in basic Html and css. At the beginning of 2022, I found courses from RSSchool. I signed up for Stage-1, but in the process I realized that my knowledge was not enough.</p>
+        <p>I was glad this fall I learned about Stage-0. I hope this course will help me reach a higher level of knowledge and go to study further</p>
     </section>
     <section>
         <h2>Skills</h2>
@@ -41,7 +36,7 @@
         <h2>Code examples</h2>
         <div>
             <div>function multiply(a, b){</в>
-            <div>&emsp;&emsp;return a * b</div> &nbsp;
+            <div>&emsp;&emsp;return a * b</div>
             <div>}</div>
         </div>
     </section>
@@ -53,17 +48,13 @@
             <li>Html, scc, js&nbsp;<a href="https://github.com/AlinaDey/work3">work3</a></li>
             <li>Html, css&nbsp;<a href="https://github.com/AlinaDey/work4">work4</a></li>
         </ul>
-    </section> 
+    </section>
     <section>
         <h2>Education</h2>
         <ul>
-            <li>2013-2017 Altai State Academy of Education. V.M. Shukshina, Biysk, Psychology, 
-                Pedagogy and psychology</li>
-            <li>2017-2019 St. Petersburg State University of Economics, St. Petersburg Master, 
-                Human Resources Management</li>
-            <li>2021 St. Petersburg State University of Industrial Technologies and Design, 
-                St. Petersburg Course Graphic design and web page layout</li>
-            <li></li>
+            <li>2013-2017 Altai State Academy of Education. V.M. Shukshina, Biysk, Psychology, Pedagogy and psychology</li>
+            <li>2017-2019 St. Petersburg State University of Economics, St. Petersburg Master, Human Resources Management</li>
+            <li>2021 St. Petersburg State University of Industrial Technologies and Design, St. Petersburg Course Graphic design and web page layout</li>
         </ul>
     </section>
     <section>
