--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -35,7 +36,7 @@
     <section>
         <h2>Code examples</h2>
         <div>
-            <div>function multiply(a, b){</в>
+            <div>function multiply(a, b){
             <div>&emsp;&emsp;return a * b</div>
             <div>}</div>
         </div>
