--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section>
         <h2>Code examples</h2>
         <div>
-            <div>function multiply(a, b){
+            <div>function multiply(a, b){</div>
             <div>&emsp;&emsp;return a * b</div>
             <div>}</div>
         </div>
@@ -62,6 +62,6 @@
         <h2>English</h2>
         <p>A2 Elementary</p>
     </section>
-  <script src="js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
