--- a/index.html
+++ b/index.html
@@ -1,67 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <meta charset="utf-8">
+    <title>cv</title>
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Deykina Alina</h1>
-    <h3>Junior Frontend Developer</h3>
-    <img src="me.jpg" alt="Deykina Alina">
-    <h2>Contacts</h2>
-    <ul>
-        <li>e-mail&nbsp;<a href="mailto:deylina70@gmail.com">deylina70@gmail.com</a></li>
-        <li>dickord AlinaDeykina(@AlinaDey)</li>
-        <li>telephone&nbsp;<a href="tel:+79531564285">+79531564285</a></li>
-        <li>github&nbsp;<a href="https://github.com/AlinaDey">AlinaDey</a></li>
-    </ul>
-    <section>
-        <h2>About me</h2>
-        <p>Last year I completed courses in basic Html and css. At the beginning of 2022, I found courses from RSSchool. I signed up for Stage-1, but in the process I realized that my knowledge was not enough.</p>
-        <p>I was glad this fall I learned about Stage-0. I hope this course will help me reach a higher level of knowledge and go to study further</p>
-    </section>
-    <section>
-        <h2>Skills</h2>
+    <nav class="menu">
         <ul>
-            <li>Git, Github</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Figma, Adobe Photoshop</li>
-            <li>VS Code</li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#contacts">Contacts</a></li>
+            <li><a href="#about-me">About me</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#code-examples">Code examples</a></li>
+            <li><a href="#work-experience">Work experience</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#languages">Languages</a></li>
         </ul>
-    </section>
-    <section>
-        <h2>Code examples</h2>
-        <div>
-            <div>function multiply(a, b){</div>
-            <div>&emsp;&emsp;return a * b</div>
-            <div>}</div>
-        </div>
-    </section>
-    <section>
-        <h2>Work experience</h2>
-        <ul>
-            <li>Html, scc&nbsp;<a href="https://github.com/AlinaDey/work1">work1</a></li>
-            <li>Html, scc&nbsp;<a href="https://github.com/AlinaDey/work2">work2</a></li>
-            <li>Html, scc, js&nbsp;<a href="https://github.com/AlinaDey/work3">work3</a></li>
-            <li>Html, css&nbsp;<a href="https://github.com/AlinaDey/work4">work4</a></li>
-        </ul>
-    </section>
-    <section>
-        <h2>Education</h2>
-        <ul>
-            <li>2013-2017 Altai State Academy of Education. V.M. Shukshina, Biysk, Psychology, Pedagogy and psychology</li>
-            <li>2017-2019 St. Petersburg State University of Economics, St. Petersburg Master, Human Resources Management</li>
-            <li>2021 St. Petersburg State University of Industrial Technologies and Design, St. Petersburg Course Graphic design and web page layout</li>
-        </ul>
-    </section>
-    <section>
-        <h2>English</h2>
-        <p>A2 Elementary</p>
-    </section>
-    <script src="js/scripts.js"></script>
+    </nav>
 </body>
 </html>
