feat: add header

--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
             <li><a href="#languages">Languages</a></li>
         </ul>
     </nav>
+    <header class="home" id="home">
+        <div class="photo">
+            <img class="header-photo" src="me.jpg" alt="Deykina Alina">
+        </div>
+        <div class="header-text">
+            <h1>Deykina Alina</h1>
+            <h3>Junior Frontend Developer</h3>
+        </div>        
+    </header>
 </body>
 </html>
