--- a/index.html
+++ b/index.html
@@ -28,5 +28,104 @@
             <h3>Junior Frontend Developer</h3>
         </div>        
     </header>
+    <main>
+        <div class="block1">
+            <section class="contacts" id="contacts">
+                <h2>Contacts</h2>
+                <ul>
+                    <li><em>E-mail:</em>&nbsp;<a href="mailto:deylina70@gmail.com">Deylina70@gmail.com</a></li>
+                    <li><em>Discord:</em>&nbsp;<a href="https://discord.gg/k5jmy5T475">AlinaDeykina(@AlinaDey)</a></li>
+                    <li><em>Telephone:</em>&nbsp;<a href="tel:+79531564285">+79531564285</a></li>
+                    <li><em>GitHub:</em>&nbsp;<a href="https://github.com/AlinaDey">AlinaDey</a></li>
+                </ul>
+            </section>
+            <section class="about-me" id="about-me">
+                <h2>About me</h2>
+                <p>Last year I completed courses in basic Html and css. At the beginning of 2022, I found courses from RSSchool.</p> 
+                <p>I signed up for Stage-1, but in the process I realized that my knowledge was not enough.</p>
+                <p>I was glad this fall I learned about Stage-0. I hope this course will help me reach a higher level of knowledge and go to study further</p>
+            </section>
+            <section class="skills" id="skills">
+                <h2>Skills</h2>
+                <ul>
+                    <li>Git, Github</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Figma</li>
+                    <li>Adobe Photoshop</li>
+                    <li>VS Code</li>
+                </ul>
+            </section>
+            <section class="languages" id="languages">
+                <h2>Languages</h2>
+                 <ul>
+                    <li>Russian native</li>
+                    <li>English A2</li>
+                    <li>Polish A1</li>
+                </ul>
+            </section>
+        </div>
+        <div class="block2">
+             <section class="education" id="education">
+                <h2>Education</h2>
+                <ul>
+                    <li><em>2013-2017</em> Altai State Academy of Education. V.M. Shukshina, Biysk, Psychology, Pedagogy and psychology</li>
+                    <li><em>2017-2019</em> St. Petersburg State University of Economics, St. Petersburg, Human Resources Management</li>
+                    <li><em>2021</em> St. Petersburg State University of Industrial Technologies and Design, Course Graphic design and web page layout</li>
+                </ul>
+            </section>
+            <section class="code-examples" id="code-examples">
+                <h2>Code examples</h2>
+                <div>
+<pre>
+    function multiply(a, b) {
+        return a * b;
+    };
+</pre>          <pre>
+                    const square = (num) => {
+                        return num * num;
+                    };
+                </pre>
+                </div>  
+            </section>
+            <section class="work-experience" id="work-experience">
+                <h2>Work experience</h2> 
+                <ul>
+                    <li>
+                        <div class="img-work">
+                            <img src="img/work1.png" alt="work1" width="150" height="150">
+                        </div>
+                        <div class="link-work">
+                            <a href="https://github.com/AlinaDey/work1"><div class="button">See details</div></a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="img-work">
+                            <img src="img/work2.png" alt="work2" width="150" height="150">
+                        </div>
+                        <div class="link-work">
+                            <a href="https://github.com/AlinaDey/work2"><div class="button">See details</div></a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="img-work">
+                            <img src="img/work3.png" alt="work3" width="150" height="150">
+                        </div>
+                        <div class="link-work">
+                            <a href="https://github.com/AlinaDey/work3"><div class="button">See details</div></a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="img-work">
+                            <img src="img/work4.png" alt="work4" width="150" height="150">
+                        </div>
+                        <div class="link-work">
+                            <a href="https://github.com/AlinaDey/work4"><div class="button">See details</div></a>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
