feat: add footer

--- a/index.html
+++ b/index.html
@@ -127,5 +127,11 @@
             </section>
         </div>
     </main>
+    <footer>
+        <a href="https://github.com/AlinaDey">GitHub</a>
+        <p>2022</p>
+        <a href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" alt="LogoRSSchool" height="18" width="50"></a>
+    </footer>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
