refactor: change img links

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>cv</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav class="menu">
@@ -21,7 +22,7 @@
     </nav>
     <header class="home" id="home">
         <div class="photo">
-            <img class="header-photo" src="me.jpg" alt="Deykina Alina">
+            <img class="header-photo" src="assets/img/me.jpg" alt="Deykina Alina">
         </div>
         <div class="header-text">
             <h1>Deykina Alina</h1>
@@ -93,7 +94,7 @@
                 <ul>
                     <li>
                         <div class="img-work">
-                            <img src="img/work1.png" alt="work1" width="150" height="150">
+                            <img src="assets/img/work1.png" alt="work1" width="150" height="150">
                         </div>
                         <div class="link-work">
                             <a href="https://github.com/AlinaDey/work1"><div class="button">See details</div></a>
@@ -101,7 +102,7 @@
                     </li>
                     <li>
                         <div class="img-work">
-                            <img src="img/work2.png" alt="work2" width="150" height="150">
+                            <img src="assets/img/work2.png" alt="work2" width="150" height="150">
                         </div>
                         <div class="link-work">
                             <a href="https://github.com/AlinaDey/work2"><div class="button">See details</div></a>
@@ -109,7 +110,7 @@
                     </li>
                     <li>
                         <div class="img-work">
-                            <img src="img/work3.png" alt="work3" width="150" height="150">
+                            <img src="assets/img/work3.png" alt="work3" width="150" height="150">
                         </div>
                         <div class="link-work">
                             <a href="https://github.com/AlinaDey/work3"><div class="button">See details</div></a>
@@ -117,7 +118,7 @@
                     </li>
                     <li>
                         <div class="img-work">
-                            <img src="img/work4.png" alt="work4" width="150" height="150">
+                            <img src="assets/img/work4.png" alt="work4" width="150" height="150">
                         </div>
                         <div class="link-work">
                             <a href="https://github.com/AlinaDey/work4"><div class="button">See details</div></a>
