--- a/index.html
+++ b/index.html
@@ -1,138 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+<head>  
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cv</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="assets/favicon.ico">
 </head>
 <body>
-    <nav class="menu">
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#contacts">Contacts</a></li>
-            <li><a href="#about-me">About me</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#code-examples">Code examples</a></li>
-            <li><a href="#work-experience">Work experience</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#languages">Languages</a></li>
-        </ul>
-    </nav>
-    <header class="home" id="home">
-        <div class="photo">
-            <img class="header-photo" src="assets/img/me.jpg" alt="Deykina Alina">
+    <header class="header">
+        <div class="container">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                <li class="nav-item"><a href="#about-me" class="nav-link">About me</a></li>
+                <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                <li class="nav-item"><a href="#code-examples" class="nav-link">Code examples</a></li>
+                <li class="nav-item"><a href="#work-experience" class="nav-link">Work experience</a></li>
+                <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
+            </ul>
+            <section class="section" id="home">
+                <div class="section-photo">
+                    <img class="section-photo-main" src="./assets/img/me.jpg" alt="Deykina Alina">
+                </div>
+                <div class="section-text">
+                    <h1 class="section-title">Deykina Alina</h1>
+                    <h3 class="section-title">Junior Frontend Developer</h3>
+                </div>        
+            </section>
         </div>
-        <div class="header-text">
-            <h1>Deykina Alina</h1>
-            <h3>Junior Frontend Developer</h3>
-        </div>        
     </header>
-    <main>
-        <div class="block1">
-            <section class="contacts" id="contacts">
-                <h2>Contacts</h2>
-                <ul>
-                    <li><em>E-mail:</em>&nbsp;<a href="mailto:deylina70@gmail.com">Deylina70@gmail.com</a></li>
-                    <li><em>Discord:</em>&nbsp;<a href="https://discord.gg/k5jmy5T475">AlinaDeykina(@AlinaDey)</a></li>
-                    <li><em>Telephone:</em>&nbsp;<a href="tel:+79531564285">+79531564285</a></li>
-                    <li><em>GitHub:</em>&nbsp;<a href="https://github.com/AlinaDey">AlinaDey</a></li>
-                </ul>
-            </section>
-            <section class="about-me" id="about-me">
-                <h2>About me</h2>
-                <p>Last year I completed courses in basic Html and css. At the beginning of 2022, I found courses from RSSchool.</p> 
-                <p>I signed up for Stage-1, but in the process I realized that my knowledge was not enough.</p>
-                <p>I was glad this fall I learned about Stage-0. I hope this course will help me reach a higher level of knowledge and go to study further</p>
-            </section>
-            <section class="skills" id="skills">
-                <h2>Skills</h2>
-                <ul>
-                    <li>Git, Github</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Figma</li>
-                    <li>Adobe Photoshop</li>
-                    <li>VS Code</li>
-                </ul>
-            </section>
-            <section class="languages" id="languages">
-                <h2>Languages</h2>
-                 <ul>
-                    <li>Russian native</li>
-                    <li>English A2</li>
-                    <li>Polish A1</li>
-                </ul>
-            </section>
-        </div>
-        <div class="block2">
-             <section class="education" id="education">
-                <h2>Education</h2>
-                <ul>
-                    <li><em>2013-2017</em> Altai State Academy of Education. V.M. Shukshina, Biysk, Psychology, Pedagogy and psychology</li>
-                    <li><em>2017-2019</em> St. Petersburg State University of Economics, St. Petersburg, Human Resources Management</li>
-                    <li><em>2021</em> St. Petersburg State University of Industrial Technologies and Design, Course Graphic design and web page layout</li>
-                </ul>
-            </section>
-            <section class="code-examples" id="code-examples">
-                <h2>Code examples</h2>
-                <div>
+    <main class="main">
+        <div class="container main-container">
+            <div class="main-container-block1">
+                <section class="section" id="contacts">
+                    <h2 class="section-title">Contacts</h2>
+                    <ul class="section-list">
+                        <li class="section-item">
+                            <em>E-mail:</em>
+                            <a href="mailto:deylina70@gmail.com" class="section-link">
+                                Deylina70@gmail.com
+                            </a>
+                        </li>
+                        <li class="section-item">
+                            <em>Discord:</em>
+                            <a href="https://discord.gg/k5jmy5T475" class="section-link">
+                                AlinaDeykina(@AlinaDey)
+                            </a>
+                        </li>
+                        <li class="section-item">
+                            <em>Telephone:</em>
+                            <a href="tel:+79531564285" class="section-link">
+                                79531564285
+                            </a>
+                        </li>
+                        <li class="section-item">
+                            <em>GitHub:</em>
+                            <a href="https://github.com/AlinaDey" class="section-link">
+                                AlinaDey
+                            </a>
+                        </li>
+                    </ul>
+                </section>
+                <section class="section" id="about-me">
+                    <h2 class="section-title">About me</h2>
+                    <p>Last year I completed courses in basic Html and css. At the beginning of 2022, I found courses from RSSchool.</p> 
+                    <p>I signed up for Stage-1, but in the process I realized that my knowledge was not enough.</p>
+                    <p>I was glad this fall I learned about Stage-0. I hope this course will help me reach a higher level of knowledge and go to study further</p>
+                </section>
+                <section class="section" id="skills">
+                    <h2 class="section-title">Skills</h2>
+                    <ul class="section-list">
+                        <li class="section-item">Git, Github</li>
+                        <li class="section-item">HTML</li>
+                        <li class="section-item">CSS</li>
+                        <li class="section-item">Figma</li>
+                        <li class="section-item">Adobe Photoshop</li>
+                        <li class="section-item">VS Code</li>
+                    </ul>
+                </section>
+                <section class="section" id="languages">
+                    <h2 class="section-title">Languages</h2>
+                    <ul class="section-list">
+                        <li class="section-item">Russian native</li>
+                        <li class="section-item">English A2</li>
+                        <li class="section-item">Polish A1</li>
+                    </ul>
+                </section>
+            </div>
+            <div class="main-container-block2">
+                <section class="section" id="education">
+                    <h2 class="section-title">Education</h2>
+                    <ul class="section-list">
+                        <li class="section-item"><em>2013-2017</em> Altai State Academy of Education. V.M. Shukshina, Biysk, Psychology, Pedagogy and psychology</li>
+                        <li class="section-item"><em>2017-2019</em> St. Petersburg State University of Economics, St. Petersburg, Human Resources Management</li>
+                        <li class="section-item"><em>2021</em> St. Petersburg State University of Industrial Technologies and Design, Course Graphic design and web page layout</li>
+                    </ul>
+                </section>
+                <section class="section" id="code-examples">
+                    <h2 class="section-title">Code examples</h2>
+                    <div>
 <pre>
     function multiply(a, b) {
         return a * b;
     };
-</pre>          <pre>
-                    const square = (num) => {
-                        return num * num;
-                    };
-                </pre>
-                </div>  
-            </section>
-            <section class="work-experience" id="work-experience">
-                <h2>Work experience</h2> 
-                <ul>
-                    <li>
-                        <div class="img-work">
-                            <img src="assets/img/work1.png" alt="work1" width="150" height="150">
-                        </div>
-                        <div class="link-work">
-                            <a href="https://github.com/AlinaDey/work1"><div class="button">See details</div></a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="img-work">
-                            <img src="assets/img/work2.png" alt="work2" width="150" height="150">
-                        </div>
-                        <div class="link-work">
-                            <a href="https://github.com/AlinaDey/work2"><div class="button">See details</div></a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="img-work">
-                            <img src="assets/img/work3.png" alt="work3" width="150" height="150">
-                        </div>
-                        <div class="link-work">
-                            <a href="https://github.com/AlinaDey/work3"><div class="button">See details</div></a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="img-work">
-                            <img src="assets/img/work4.png" alt="work4" width="150" height="150">
-                        </div>
-                        <div class="link-work">
-                            <a href="https://github.com/AlinaDey/work4"><div class="button">See details</div></a>
-                        </div>
-                    </li>
-                </ul>
-            </section>
+</pre>  
+        <pre>
+            const square = (num) => {
+                return num * num;
+            };
+            </pre>
+                    </div>  
+                </section>
+                <section class="section" id="work-experience">
+                    <h2 class="section-title">Work experience</h2> 
+                    <ul class="section-list">
+                        <li class="section-item">
+                            <div class="section-img">
+                                <img src="./assets/img/work1.png" alt="work1" width="150" height="150">
+                            </div>
+                            <div class="section-link">
+                                <a href="https://github.com/AlinaDey/work1">
+                                    <div class="section-button">See details</div>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="section-item">
+                            <div class="section-img">
+                                <img src="./assets/img/work2.png" alt="work2" width="150" height="150">
+                            </div>
+                            <div class="section-link">
+                                <a href="https://github.com/AlinaDey/work2">
+                                    <div class="section-button">See details</div>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="section-item">
+                            <div class="section-img">
+                                <img src="./assets/img/work3.png" alt="work3" width="150" height="150">
+                            </div>
+                            <div class="section-link">
+                                <a href="https://github.com/AlinaDey/work3">
+                                    <div class="section-button">See details</div>
+                                </a>
+                            </div>
+                        </li>
+                        <li class="section-item">
+                            <div class="section-img">
+                                <img src="./assets/img/work4.png" alt="work4" width="150" height="150">
+                            </div>
+                            <div class="section-link">
+                                <a href="https://github.com/AlinaDey/work4">
+                                    <div class="section-button">See details</div>
+                                <a>
+                            </div>
+                        </li>
+                    </ul>
+                </section> 
+            </div>
         </div>
     </main>
-    <footer>
-        <a href="https://github.com/AlinaDey">GitHub</a>
-        <p>2022</p>
-        <a href="https://rs.school/js/"><img src="https://rs.school/images/rs_school_js.svg" alt="LogoRSSchool" height="18" width="50"></a>
+    <footer class="footer">
+        <div class="container">
+            <a href="https://github.com/AlinaDey">GitHub</a>
+            <p>2022</p>
+            <a href="https://rs.school/js/">
+                <img src="https://rs.school/images/rs_school_js.svg" alt="LogoRSSchool" height="18" width="50">
+            </a>
+        </div>
     </footer>
-    <script src="js/scripts.js"></script>
 </body>
 </html>
+
+
