--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 <body>
     <header class="header">
         <div class="container">
-            <ul class="nav-list">
-                <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-                <li class="nav-item"><a href="#about-me" class="nav-link">About me</a></li>
-                <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-                <li class="nav-item"><a href="#code-examples" class="nav-link">Code examples</a></li>
-                <li class="nav-item"><a href="#work-experience" class="nav-link">Work experience</a></li>
-                <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
-                <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
-            </ul>
+            <nav>
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                    <li class="nav-item"><a href="#about-me" class="nav-link">About me</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#code-examples" class="nav-link">Code examples</a></li>
+                    <li class="nav-item"><a href="#work-experience" class="nav-link">Work experience</a></li>
+                    <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
+                </ul>
+            </nav>
             <section class="section" id="home">
                 <div class="section-photo">
                     <img class="section-photo-main" src="./assets/img/me.jpg" alt="Deykina Alina">
